# wydt

./: .gitignore  README.md  pyproject.toml
src/wydt/: __init__.py  auth.py  cli.py  llm.py  mcp.py  models.py
src/wydt/templates/: base.html  entry.html  index.html  logs_partial.html  macros.html  weekly.html  weekly_summary_partial.html
